--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{content-for "head"}}
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="https://mapzen.com/common/styleguide/styles/styleguide.css">
-    <link rel="stylesheet" href="assets/mobility-playground.css">
+    <link rel="stylesheet" href="vendor/styleguide.css">
+    <link rel="stylesheet" href="assets/mobility-explorer.css">
     {{content-for "head-footer"}}
   </head>
     {{content-for "body"}}
     <script src="https://www.nextzen.org/tangram/0.13.2/tangram.debug.js"></script>
     <script src="assets/vendor.js"></script>
-    <script src="assets/mobility-playground.js"></script>
-    <script src="https://mapzen.com/common/styleguide/scripts/mapzen-styleguide.min.js"></script>
+    <script src="assets/mobility-explorer.js"></script>
+    <script src="vendor/styleguide.min.js"></script>
     {{content-for "body-footer"}}
   </body>
 </html>
