--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mobility Explorer</title>
-    <meta name="description" content="">
+    <title>Explorador de Mobilidade &sdot; TPP</title>
+
+    <!-- Favicon and App Icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/icons/blue/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/icons/blue/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/icons/blue/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/icons/blue/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/icons/blue/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/icons/blue/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/icons/blue/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/icons/blue/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/blue/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/icons/blue/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/blue/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/icons/blue/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/blue/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/icons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/images/icons/blue/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta name="description" content="Explorador de Mobilidade para a API do Banco de Dados TPP. Observe os transportes públicos em Portugal.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{content-for "head"}}
     <link rel="stylesheet" href="assets/vendor.css">
@@ -13,10 +33,10 @@
     {{content-for "head-footer"}}
   </head>
     {{content-for "body"}}
-    <script src="https://www.nextzen.org/tangram/0.13.2/tangram.debug.js"></script>
+    <script src="https://www.nextzen.org/tangram/0.13.2/tangram.min.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/mobility-explorer.js"></script>
-    <script src="vendor/styleguide.min.js"></script>
+    <script src="vendor/styleguide.js"></script>
     {{content-for "body-footer"}}
   </body>
 </html>
