--- a/tests/index.html
+++ b/tests/index.html
@@ -6,7 +6,33 @@
     <title>MobilityPlayground Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+    // This polyfill from https://www.npmjs.com/package/phantomjs-polyfill-object-assign
+    //https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/assign#Polyfill
+    if (typeof Object.assign != 'function') {
+      (function () {
+        Object.assign = function (target) {
+          'use strict';
+          if (target === undefined || target === null) {
+            throw new TypeError('Cannot convert undefined or null to object');
+          }
 
+          var output = Object(target);
+          for (var index = 1; index < arguments.length; index++) {
+            var source = arguments[index];
+            if (source !== undefined && source !== null) {
+              for (var nextKey in source) {
+                if (source.hasOwnProperty(nextKey)) {
+                  output[nextKey] = source[nextKey];
+                }
+              }
+            }
+          }
+          return output;
+        };
+      })();
+    }
+    </script>
     {{content-for "head"}}
     {{content-for "test-head"}}
 
