Fix Operator and Route Include/exclude in Isochrones

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="https://www.nextzen.org/tangram/0.13.2/tangram.min.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/mobility-explorer.js"></script>
+    <script src="vendor/styleguide.js"></script>
     {{content-for "body-footer"}}
   </body>
 </html>
